@@ -20,6 +20,8 @@ public:
     bool cancelRequest();
 
 signals:
+    void requestProgress(qint64 transferred);
+
     void requestComplete(QByteArray const & data, QString const & mime);
 
     void requestFailed(QString const & message);
