@@ -16,6 +16,7 @@ Kristall Changelog
 - Added option to render all text/* documents as plain text.
 - Added option to render gopher maps with icons *OR* text only
 - Fixed bug: Correct URL escaping for gemini requests.
+- Added progress display in status bar with loading time and already transferred bytes
 
 == 0.1
 - Initial release
